--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,7 +8,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: #5331ca;
+  background-color: #6343d1;
 }
 
 @media screen and (max-width: 966px) {
