--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,3 +26,7 @@
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+article img {
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2)
+}
