--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,3 +30,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 article img {
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2)
 }
+
+h1 {
+  font-size:  2.1rem;
+}
