--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,11 +4,11 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 5rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: #6343d1;
+  background-color: var(--ifm-hero-banner-bg-color);
 }
 
 @media screen and (max-width: 966px) {
