--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,7 +16,9 @@
   --ifm-code-font-size: 95%;
   --ifm-navbar-link-color: #646464;
   --ifm-hero-banner-bg: #6343d1;
+  --docusaurus-highlighted-code-line-bg: #dae1f3;
 }
+
 
 .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.1);
@@ -35,6 +37,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   --ifm-font-color-base: rgb(245, 246, 247);
   --ifm-navbar-link-color: #eeee;
   --ifm-hero-banner-bg: linear-gradient(13deg, rgb(24 25 26) 49%, rgba(99,67,209,1) 100%);
+  --docusaurus-highlighted-code-line-bg: #37393f;
 }
 
 
