--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -66,3 +66,20 @@ h1 {
 .menu__link--sublist-caret:after{
   background: var(--ifm-menu-link-sublist-icon) 50% / 1.5rem 1.5rem;
 }
+
+
+.responsive-video {
+    position: relative;
+    padding-bottom: 56.25%; /* For 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.responsive-video video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
